--- a/styles/style.css
+++ b/styles/style.css
@@ -1,50 +1,74 @@
-@font-face{
-  src:url('../fonts/FiraSans-Regular.ttf');
-  font-family: "Fira Sans";
+@font-face {
+  font-family: 'Fira Sans';
+  src: local('Fira Sans Regular'), local('FiraSans-Regular'),
+    url('../fonts/FiraSans-Regular.woff2') format('woff2'),
+    url('../fonts/FiraSans-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
-@font-face{
-  src:url('../fonts/FiraSans-Bold.ttf');
-  font-family: "Fira Sans";
-  font-weight: bold;
-  font-style: normal;
-}
-
-@font-face{
-  src:url('../fonts/FiraSans-Italic.ttf');
-  font-family: "Fira Sans";
+@font-face {
+  font-family: 'Fira Sans';
+  src: local('Fira Sans Italic'), local('FiraSans-Italic'),
+    url('../fonts/FiraSans-Italic.woff2') format('woff2'),
+    url('../fonts/FiraSans-Italic.woff') format('woff');
   font-weight: normal;
   font-style: italic;
+  font-display: swap;
 }
 
-body{
-  background-color:white;
-  color:black;
-  align: left;
-  font-family: "Fira Sans";
-  font-weight: normal;
-  vertical-align: top;
-}
-
-main{
-  background-color:#F4F4F4;
-}
-
-h1{
-  font-family: "Fira Sans";
+@font-face {
+  font-family: 'Fira Sans';
+  src: local('Fira Sans Bold'), local('FiraSans-Bold'),
+    url('../fonts/FiraSans-Bold.woff2') format('woff2'),
+    url('../fonts/FiraSans-Bold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
-  font-size: 60px;
-  line-height: 70px;
-  letter-spacing: -1px;
-  color:black;
+  font-display: swap;
 }
 
-h2{
-  font-family: Fira Sans;
+@font-face {
+  font-family: 'Fira Sans';
+  src: local('Fira Sans Medium Italic'), local('FiraSans-MediumItalic'),
+    url('../fonts/FiraSans-MediumItalic.woff2') format('woff2'),
+    url('../fonts/FiraSans-MediumItalic.woff') format('woff');
+  font-weight: 500;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Fira Sans';
+  src: local('Fira Sans Medium'), local('FiraSans-Medium'),
+    url('../fonts/FiraSans-Medium.woff2') format('woff2'),
+    url('../fonts/FiraSans-Medium.woff') format('woff');
+  font-weight: 500;
   font-style: normal;
+  font-display: swap;
+}
+
+body {
+  background-color: white;
+  color: black;
+  font-family: "Fira Sans";
+  font-size: 18px;
+  line-height: 28px;
+  font-weight: normal;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+h2 {
+  font-family: Fira Sans;
   font-weight: bold;
   font-size: 40px;
   line-height: 50px;
@@ -52,17 +76,39 @@ h2{
   color: #222222;
 }
 
-p{
+button {
+  font-size: 15px;
+  line-height: 30px;
+  width: 50px;
+  min-height: 50px;
+  background: #C4C4C4;
+  color: white;
+
+}
+
+.page {
+  background-color: #F4F4F4;
+}
+
+.main-heading {
+  font-family: "Fira Sans";
+  font-weight: bold;
+  font-size: 60px;
+  line-height: 70px;
+  letter-spacing: -1px;
+  color: black;
+}
+
+.main-text {
   color: #222222;
   opacity: 0.7;
 }
 
-.text-block a{
-  position:absolute;
+.button {
+  position: absolute;
   background: #4737FF;
-  color:white;
+  color: white;
   font-family: "Fira Sans";
-  font-style: normal;
   font-weight: 500;
   font-size: 14px;
   line-height: 24px;
@@ -71,65 +117,50 @@ p{
   text-transform: uppercase;
 }
 
-
-
-ul, ul.ul-grey {
+.li-item {
   color: #222222;
   opacity: 0.5;
-  list-style:none;
+  list-style: none;
   font-size: 18px;
   line-height: 28px;
 }
 
-button{
-  font-size:15px;
-  width:50px;
-  height:50px;
-  background: #C4C4C4;
-  color:white;
-}
-
-div.dark-footer{
+.dark-footer {
   background: #515151;
 }
 
-.p-name{
-  color:black;
+.p-name {
+  color: black;
   font-family: "Fira Sans";
-  font-style: normal;
   font-weight: bold;
   font-size: 22px;
   line-height: 32px;
 }
 
-.first-li{
-  list-style-image : url(../img/100.svg);
+.first-li {
+  list-style-image: url(../img/100.svg);
 }
 
-.second-li{
-  list-style-image : url(../img/94.svg);
+.second-li {
+  list-style-image: url(../img/94.svg);
 }
 
-.down-footer{
+.down-footer {
   background-color: #515151;
 }
 
-.up-footer{
+.up-footer {
   background-color: #FAFAFA;
 }
 
-.article{
+.article, .index {
   background-color: #E5E5E5;
 }
 
-.page-header-index{
+.page-header-index {
   background-color: #F4F4F4;
 }
 
- .index{
-  background-color: #E5E5E5;
-}
-
-div.left{
-  float : left;
+.left {
+  float: left;
 }
